--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,10 @@
 services:
   - type: web
     plan: free
+    name: mystery-roles-bot
+    buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     envVars:
       - key: BOT_TOKEN
-        value: YOUR_TELEGRAM_BOT_TOKEN
+        value: ваш_токен_здесь
+    healthCheckPath: /health
